添加很多项目

--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages":[
+    "projects/news/news",
+    "projects/news/newscontent/newscontent",
     "projects/home/index",
+    "projects/doutu/make/index",
+    "projects/doutu/index",
     "projects/guide/index"
   ]
 }
