新增： 无 优化： 无 修复： 无 by fuwensong

--- a/app.json
+++ b/app.json
@@ -5,6 +5,8 @@
     "projects/home/index",
     "projects/doutu/make/index",
     "projects/doutu/index",
+    "projects/guide/index",
+    "projects/guide/index",
     "projects/guide/index"
   ]
 }
