--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "projects/news/newscontent/newscontent",
     "projects/home/index",
     "projects/doutu/make/index",
-    "projects/doutu/index",
-    "projects/guide/index",
-    "projects/guide/index",
-    "projects/guide/index"
+    "projects/doutu/index4",
+    "projects/guide/index3",
+    "projects/guide/index2",
+    "projects/guide/index1"
   ]
 }
